doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\BlueJ\lib\userlib\pi4j-service.jar;\\s-file2\studentdocs$\Intake2016\16KUCAN\downloads\24052022_WEREWOLVESVSHUMANS
-d
\\s-file2\studentdocs$\Intake2016\16KUCAN\downloads\24052022_WEREWOLVESVSHUMANS\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
\\s-file2\studentdocs$\Intake2016\16KUCAN\downloads\24052022_WEREWOLVESVSHUMANS\BattleProgram.java
<---- end of javadoc command ---->
Loading source file \\s-file2\studentdocs$\Intake2016\16KUCAN\downloads\24052022_WEREWOLVESVSHUMANS\BattleProgram.java...
\\s-file2\studentdocs$\Intake2016\16KUCAN\downloads\24052022_WEREWOLVESVSHUMANS\BattleProgram.java:159: error: not a statement
        System.out.print
                  ^
\\s-file2\studentdocs$\Intake2016\16KUCAN\downloads\24052022_WEREWOLVESVSHUMANS\BattleProgram.java:159: error: ';' expected
        System.out.print
                        ^
2 errors
